--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,10 @@ fabric.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+### Loom ###
+.loom
+/build/
+
 ### Gradle ###
 .gradle
 /build/
